--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <repository>
             <id>jiyan</id>
             <name>Jiyan Nexus Repository</name>
-            <url>http://10.15.231.2:8081/content/repositories/central/</url>
+            <url>http://10.15.219.23:8081/content/repositories/central/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -155,6 +155,14 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>4.2.5.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.dbunit/dbunit -->
+        <dependency>
+            <groupId>org.dbunit</groupId>
+            <artifactId>dbunit</artifactId>
+            <version>2.5.0</version>
             <scope>test</scope>
         </dependency>
 
