--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,15 @@
     <groupId>cn.lncsa</groupId>
     <artifactId>lncsoftware</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <modules>
+        <module>lncsa-base</module>
+        <module>lncsa-common</module>
+        <module>lncsa-permission</module>
+        <module>lncsa-article</module>
+        <module>lncsa-web</module>
+        <module>lncsa-server</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <properties>
         <hibernate.version>5.1.0.Final</hibernate.version>
