废了一半的DAO的Spring Data自动实现。。。。
1.Controller层内有很多API没补上导致Services层里出现闲置方法
2.需要通过自定义字段查询的实体的DAO要补上IFieldBaseQuery的接口，以及要写该接口的范型实现
3.所有涉及到IRelationshipRepository的DAO都要提供实现

自己挖(zuo)的坑(si)哭着也要填(shou)了

--- a/pom.xml
+++ b/pom.xml
@@ -153,18 +153,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.190</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.github.springtestdbunit/spring-test-dbunit -->
         <dependency>
             <groupId>com.github.springtestdbunit</groupId>
             <artifactId>spring-test-dbunit</artifactId>
             <version>1.2.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.7</version>
             <scope>test</scope>
         </dependency>
 
@@ -175,6 +176,15 @@
             <version>2.5.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.7</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Servlet API-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
