--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>cn.lncsa</groupId>
     <artifactId>lncsoftware</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>war</packaging>
 
     <properties>
         <hibernate.version>5.1.0.Final</hibernate.version>
@@ -72,6 +72,16 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.javassist</groupId>
@@ -113,7 +123,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-            <version>4.2.5.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
 
@@ -210,7 +220,6 @@
     <build>
         <!-- Compile plugin -->
         <plugins>
-
             <!-- Web project plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
