--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <hibernate.version>5.1.0.Final</hibernate.version>
         <spring.version>4.2.5.RELEASE</spring.version>
+        <jackson.version>2.7.0</jackson.version>
     </properties>
 
     <dependencies>
@@ -24,11 +25,18 @@
             <version>1.2</version>
         </dependency>
 
+        <!-- Jackson -->
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.7.0</version>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/javax.servlet.jsp/jsp-api -->
