--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -34,6 +34,6 @@
 
     <servlet-mapping>
         <servlet-name>spring-mvc</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 </web-app>
